# langchain-vertexai-extended

./: README.md  pyproject.toml
src/langchain_vertexai_extended/: llms.py
